@@ -1,5 +1,14 @@
 2005-10-06  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-toolbar.c: (ephy_toolbar_update_spinner),
+	(ephy_toolbar_set_show_leave_fullscreen),
+	(ephy_toolbar_set_security_state),
+	(ephy_toolbar_set_lock_visibility), (ephy_toolbar_set_spinning):
+
+	Use flags to save memory for the priv struct.
+
+2005-10-06  Christian Persch  <chpe@cvs.gnome.org>
+
 	* lib/widgets/ephy-location-entry.c:
 	(ephy_location_entry_style_set), (ephy_location_entry_class_init),
 	(ephy_location_entry_set_favicon),
